Implement comprehensive step breakdown system for all renovation areas
- Introduced a major update in `CHANGELOG.md` detailing the implementation of step-by-step breakdowns for 15 renovation areas, enhancing project management capabilities.
- Expanded `SCOPE_STEP_BREAKDOWNS` in `renovation-data.js` to include over 50 detailed workflows and 300+ individual steps across various scopes.
- Added a user-controlled toggle feature in `index.html` for enabling/disabling step breakdowns, improving user experience.
- Enhanced `script.js` with real-time preview functionality for step breakdowns based on user selections.
- Updated `style.css` to style the new feature toggle section and breakdown previews, ensuring a modern and responsive design.
- Fixed critical bugs related to step breakdown execution during board creation.

This update significantly enhances the Renovation Project Manager's functionality, providing users with detailed, actionable steps for effective project planning and execution.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
                     <!-- Scope dropdowns will be populated by JavaScript -->
                 </div>
                 
+                <!-- Step Breakdown Feature Toggle -->
+                <div class="feature-toggle-section">
+                    <div class="toggle-container">
+                        <label class="toggle-switch" for="step-breakdown-toggle">
+                            <input type="checkbox" id="step-breakdown-toggle" checked>
+                            <span class="toggle-slider"></span>
+                        </label>
+                        <div class="toggle-info">
+                            <h4>🔧 Enhanced Step-by-Step Breakdowns</h4>
+                            <p>Break down selected scopes into detailed, actionable steps for better project management. When enabled, compatible scopes will be expanded into multiple granular tasks.</p>
+                            <div class="breakdown-preview" id="breakdown-preview" style="display: none;">
+                                <small><strong>Preview:</strong> <span id="breakdown-preview-text"></span></small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="error-message" id="scopes-error"></div>
                 <div class="form-actions">
                     <button id="back-to-areas" class="btn btn-secondary">Back</button>
