--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
     </div>
 
     <script src="renovation-data.js"></script>
+    <script src="ai-config.js"></script>
     <script src="script.js"></script>
 </body>
 </html> 
